<resources>

    <string name="app_name">Electric System</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="workername">徐老三</string>
    <string name="cancellation">注销</string>
    <string name="refresh">刷新</string>
    <string name="unfinished">未完成任务</string>
    <string name="completed">已完成任务</string>
    <string name="expired">已过期任务</string>
    <string name="device_name">设备1</string>
    <string name="back">返回</string>
    <string name="home">主页</string>
    <string name="run">执行</string>
    <string name="submit">提交</string>
    <string name="failure_history">缺陷历史</string>
    <string name="add_failure">添加缺陷</string>
    <string name="dimensional_code_scanning">扫描二维码</string>
    <string name="device_failure">设备缺陷</string>
    <string name="task_name">任务1</string>
    <string name="save">保存</string>
    <string name="ture">确定</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="welcome">欢迎进入手机巡视系统</string>
    <string name="cache">清除缓存</string>
    <string name="exit">退出</string>
    <string name="hint_ip">请输入服务器ip</string>
    <string name="hint_port">请输入服务器端口</string>
    <string name="hint_wid">请输入工号</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_result">请输入抄录值</string>
</resources>
